# nextsimdg

./: .cmake-lint-config.py  .gitignore  .pre-commit  CMakeLists.txt
.github/workflows/: docker.yml  doxygen.yml  linting.yml  test_suite.yml
Dockerfiles/: Dockerfile.devenv  install-xios.sh
cmake/: FindNetCDF.cmake
core/: CMakeLists.txt
core/src/: CMakeLists.txt  CommandLineParser.cpp  DevStep.cpp  Model.cpp  ModelArray.cpp  ModelArraySlice.cpp  ModelComponent.cpp  ModelMetadata.cpp  PDWriter.cpp  ParaGridIO.cpp  ParaGridIO_Xios.cpp  PrognosticData.cpp  RectGridIO.cpp  StructureFactory.cpp  Xios.cpp
core/src/discontinuousgalerkin/: ModelArrayDetails.cpp
core/src/discontinuousgalerkin/include/: ModelArrayDetails.hpp  ModelArrayTypedefs.hpp
core/src/finitevolume/: ModelArrayDetails.cpp
core/src/finitevolume/include/: ModelArrayDetails.hpp  ModelArrayTypedefs.hpp
core/src/include/: ConfigurationHelp.hpp  ModelArray.hpp  ModelArrayRef.hpp  ModelArraySlice.hpp  ModelComponent.hpp  ModelMetadata.hpp  ParaGridIO.hpp  ParaGridIO_Xios.hpp  PrognosticData.hpp  Slice.hpp  Xios.hpp  constants.hpp  gridNames.hpp  indexer.hpp  xios_c_interface.hpp
core/src/modules/DiagnosticOutputModule/: ConfigOutput.cpp  SimpleOutput.cpp  module.cfg
core/src/modules/DiagnosticOutputModule/include/: ConfigOutput.hpp  NoOutput.hpp  SimpleOutput.hpp
core/src/modules/DynamicsModule/: BBMDynamics.cpp  MEVPDynamics.cpp  module.cfg
core/src/modules/DynamicsModule/include/: BBMDynamics.hpp  FreeDriftDynamics.hpp  MEVPDynamics.hpp
core/src/modules/StructureModule/: RectangularGrid.cpp
core/src/modules/StructureModule/include/: ParametricGrid.hpp  RectangularGrid.hpp
core/src/modules/include/: IDiagnosticOutput.hpp  IDynamics.hpp  IStructure.hpp  ProtectedArrayNames.ipp
core/test/: CMakeLists.txt  ConfigOutput_test.cpp  Configurator_test.cpp  ConfiguredModule_test.cpp  DynamicsModuleForPDtest.cpp  Iterator_test.cpp  ModelArrayRef_test.cpp  ModelArraySlice_test.cpp  ModelArray_test.cpp  ModelComponent_test.cpp  PDTestDynamics.hpp  ParaGrid_test.cpp  PrognosticDataIO_test.cpp  PrognosticData_test.cpp  RectGrid_test.cpp  Slice_test.cpp  XiosAxis_test.cpp  XiosCalendar_test.cpp  XiosDomain_test.cpp  XiosField_test.cpp  XiosFile_test.cpp  XiosGrid_test.cpp  XiosReadWrite_test.cpp  XiosRead_test.cpp  XiosWrite_test.cpp  old_names.py  xios_test_partition_metadata_2.cdl  xios_tests.cfg
core/test/testmodelarraydetails/: ModelArrayDetails.cpp
core/test/testmodelarraydetails/include/: ModelArrayDetails.hpp
docs/: data_storage.rst  installation.rst  xios.rst
dynamics/: CMakeLists.txt
dynamics/src/: CGDynamicsKernel.cpp  DGTransport.cpp  ParametricMap.cpp  ParametricMesh.cpp  cgParametricMomentum.cpp
dynamics/src/include/: BBM.hpp  BBMDynamicsKernel.hpp  BBMParameters.hpp  BBMStressUpdateStep.hpp  BrittleCGDynamicsKernel.hpp  CGDynamicsKernel.hpp  DGModelArray.hpp  DGTransport.hpp  DynamicsKernel.hpp  DynamicsParameters.hpp  FreeDriftDynamicsKernel.hpp  MEB.hpp  MEVPDynamicsKernel.hpp  MEVPStressUpdateStep.hpp  ParametricMap.hpp  ParametricMesh.hpp  Tools.hpp  VPCGDynamicsKernel.hpp  VPParameters.hpp  cgParametricMomentum.hpp  dgVectorHolder.hpp  mevp.hpp
dynamics/test/: AdvectionPeriodicBC_test.cpp  Advection_test.cpp  CMakeLists.txt  DGModelArray_test.cpp  ParametricMeshArea_test.cpp  ParametricMesh_test.cpp  dgVectorHolder_test.cpp
physics/: CMakeLists.txt
physics/src/: IceGrowth.cpp  SlabOcean.cpp
physics/src/include/: IceGrowth.hpp  SlabOcean.hpp
physics/src/modules/AtmosphereBoundaryModule/: ConfiguredAtmosphere.cpp  ERA5Atmosphere.cpp  FluxConfiguredAtmosphere.cpp  MU71Atmosphere.cpp  NaresAtmosphere.cpp  module.cfg
physics/src/modules/AtmosphereBoundaryModule/include/: ConfiguredAtmosphere.hpp  ERA5Atmosphere.hpp  FluxConfiguredAtmosphere.hpp  MU71Atmosphere.hpp  NaresAtmosphere.hpp
physics/src/modules/DamageHealingModule/: ConstantHealing.cpp
physics/src/modules/DamageHealingModule/include/: ConstantHealing.hpp  NoHealing.hpp
physics/src/modules/FluxCalculationModule/: FiniteElementFluxes.cpp
physics/src/modules/FluxCalculationModule/include/: FiniteElementFluxes.hpp
physics/src/modules/IceAlbedoModule/: CCSMIceAlbedo.cpp  WintonAlbedo.cpp
physics/src/modules/IceOceanHeatFluxModule/: BasicIceOceanHeatFlux.cpp
physics/src/modules/IceThermodynamicsModule/: ThermoIce0.cpp  ThermoWinton.cpp
physics/src/modules/IceThermodynamicsModule/include/: DummyIceThermodynamics.hpp  ThermoIce0.hpp  ThermoWinton.hpp
physics/src/modules/LateralIceSpreadModule/: HiblerSpread.cpp
physics/src/modules/LateralIceSpreadModule/include/: DummyIceSpread.hpp  HiblerSpread.hpp
physics/src/modules/OceanBoundaryModule/: ConfiguredOcean.cpp  FluxConfiguredOcean.cpp  TOPAZOcean.cpp  UniformOcean.cpp
physics/src/modules/OceanBoundaryModule/include/: ConfiguredOcean.hpp  FluxConfiguredOcean.hpp  TOPAZOcean.hpp
physics/src/modules/include/: IAtmosphereBoundary.hpp  IDamageHealing.hpp  IFluxCalculation.hpp  IIceOceanHeatFlux.hpp  IIceThermodynamics.hpp  ILateralIceSpread.hpp  IOceanBoundary.hpp
physics/test/: BasicIceOceanFlux_test.cpp  CMakeLists.txt  ConstantOceanBoundary_test.cpp  DamageHealing_test.cpp  FiniteElementFluxes_test.cpp  IceGrowth_test.cpp  SlabOcean_test.cpp  ThermoIce0Temperature_test.cpp  ThermoIce0_test.cpp  ThermoWintonTemperature_test.cpp
run/: CMakeLists.txt  config_column.cfg  config_configoutput.cfg  config_dynamics.cfg  config_june23.cfg  config_nares.cfg  config_para24x30.cfg  config_polynya.cfg  config_topaz128x128.cfg  era5_topaz4_maker.py  integration_test.cfg  make_init.py  make_init25kmNH_test.py  make_init25kmNH_test_data.py  make_initNH.py  make_init_base.py  make_init_benchmark.py  make_init_column.py  make_init_nares.py  make_init_para24x30.py  make_init_polynya.py  make_init_rect20x30.py  run_integration_test.sh
test/: ThermoIntegration_test.py  integration_test.cfg  make_init25kmNH_test_data.py  run_integration_test.sh  run_test_jan2010_integration_test.sh  test_integration_test.py
